# pyburger

./: db.sqlite3  pyproject.toml
burgers/: admin.py  models.py
burgers/migrations/: 0001_initial.py
config/: settings.py  urls.py  views.py
templates/: burger_list.html  burger_search.html  main.html
